Take care of some deprecated warnings